# game-of-life

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/: cell.py  config.py  game.py  logic.py  main.py  ui.py  utils.py
